fix: TAP-6796 TM oauth/token API can not get token
Closes TAP-6796

(cherry picked from commit f85e26fa792cd71e306344d3a8e544d998ccb9ee)
(cherry picked from commit dc9df646f035280346e68ed96b137295fc9c093e)
(cherry picked from commit 31cc636a99198dd1c33ba273fab7bd1494b2f9af)
(cherry picked from commit 813f3ad825fb0b0e52884cfefa849d169475dc9c)